--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,18 @@
   color: #61dafb;
 }
 
+.backWaldoStyle {
+  border: 2px inset rgb(255, 255, 255);
+  border-radius: 20px;
+  background-color: rgb(95, 0, 0);
+}
+
 .circleStyle {
   width: 60px;
   height: 60px;
   border-radius: 40px;
-  background-color: green;
-  border: 2px solid red;
+  background-color: rgb(179, 0, 0);
+  border: 2px outset rgb(255, 255, 255);
 }
 
 .flex {
@@ -42,10 +48,13 @@
   align-items: center;
 }
 
+.controlBoard {
+  color: white;
+  padding: 10px;
+}
+
 .charBox {
-  border: 2px solid blue;
-  width: 25vw;
-  height: 10vh;
+  width: 25%;
   padding: 10px;
 }
 
@@ -54,9 +63,7 @@
 }
 
 .appControls {
-  border: 2px solid blue;
-  width: 30vw;
-  height: 10vh;
+  width: 30%;
   padding: 10px;
 }
 
@@ -64,6 +71,18 @@
   margin: 5px;
   width: 60px;
   height: 60px;
+  color: white;
+}
+
+.storyBoard {
+  margin: 20px 0;
+  padding: 20px;
+  height: 70vh;
+}
+
+.storyBoard div {
+  height: 100%;
+  width: 100%;
 }
 
 
@@ -75,4 +94,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+html {
+  background: black;
+  color: white;
 }
