--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,19 @@
   left: 460;
 }
 
+.cursorCircle {
+  width: 60px;
+  height: 60px;
+  border-radius: 60px;
+  background-color: transparent;
+  border: 2px outset rgb(255, 255, 255);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -120%);
+  cursor: none;
+}
+
 .flex {
   display: flex;
   justify-content: space-around;
@@ -102,7 +115,7 @@
   height: 100%;
   width: 100%;
   /* cursor: url('./media/MagnifyPoint.png'), auto; */
-  cursor: crosshair;
+  cursor: none;
 }
 
 
