--- a/src/App.css
+++ b/src/App.css
@@ -55,16 +55,17 @@
 }
 
 .cursorCircle {
-  width: 60px;
-  height: 60px;
+  width: 20px;
+  height: 20px;
   border-radius: 60px;
   background-color: transparent;
   border: 2px outset rgb(255, 255, 255);
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -120%);
-  cursor: none;
+  transform: translate(-50%, -50%);
+  /* cursor: none; */
+  z-index: 10;
 }
 
 .flex {
@@ -114,7 +115,7 @@
   /* position: relative; */
   height: 100%;
   width: 100%;
-  /* cursor: url('./media/MagnifyPoint.png'), auto; */
+  cursor: url('./media/MagnifyPoint.png'), auto;
   cursor: none;
 }
 
