--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,8 @@
 }
 
 .clickCircle {
-  width: 20px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   border-radius: 20px;
   background-color: rgb(179, 0, 0);
   border: 2px outset rgb(255, 255, 255);
@@ -55,8 +55,8 @@
 }
 
 .cursorCircle {
-  width: 20px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   border-radius: 60px;
   background-color: transparent;
   border: 2px outset rgb(255, 255, 255);
@@ -64,8 +64,20 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* cursor: none; */
+  cursor: none;
   z-index: 10;
+}
+
+.activeLocation {
+  background-color: green;
+}
+
+.TargetBox {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  border: 2px dotted white;
+  transform: translate(-40%, -40%);
 }
 
 .flex {
@@ -115,7 +127,7 @@
   /* position: relative; */
   height: 100%;
   width: 100%;
-  cursor: url('./media/MagnifyPoint.png'), auto;
+  /* cursor: url('./media/MagnifyPoint.png'), auto; */
   cursor: none;
 }
 
