--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,10 @@
   z-index: 20;
 }
 
+.dropDownMenu h4 {
+  margin: 2px;
+}
+
 .dropDownMenu ul {
   padding: 0;
   margin: 0;
@@ -95,6 +99,7 @@
 .dropDownMenu li {
   list-style: none;
   border: 1px solid white;
+  padding: 1px 5px;
 }
 
 .flex {
