--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,11 @@
   list-style: none;
   border: 1px solid white;
   padding: 1px 5px;
+  cursor: pointer;
+}
+
+.dropDownMenu li:first-of-type {
+  cursor: none;
 }
 
 .flex {
