--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
   position: relative;
+  max-height: 100vh;
+  overflow: hidden;
+  /* width: 95%; */
+  /* margin: 0 auto;
+  padding: 25px; */
 }
 
 .App-logo {
@@ -64,7 +69,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  cursor: none;
+  /* cursor: none; */
   z-index: 10;
 }
 
